--- a/systemtest/approvals/TestOTLPGRPCTraces.approved.json
+++ b/systemtest/approvals/TestOTLPGRPCTraces.approved.json
@@ -85,7 +85,7 @@
                 "name": "opentelemetry/go",
                 "version": "1.8.0"
             },
-            "data_stream.dataset": "apm.app",
+            "data_stream.dataset": "apm.app.unknown_service_systemtest_test",
             "data_stream.namespace": "default",
             "data_stream.type": "logs",
             "event": {
