--- a/apm-server.yml
+++ b/apm-server.yml
@@ -214,7 +214,7 @@ apm-server:
       #password: "changeme"
 
   #kibana:
-    # Enabled must be true to enable APM Agent configuration, and for fetching source maps uploaded through Kibana.
+    # Fallback method for fetching APM agent configurations.
     #enabled: false
 
     # Scheme and port can be left out and will be set to the default (`http` and `5601`).
@@ -226,6 +226,9 @@ apm-server:
     #protocol: "https"
     #username: "elastic"
     #password: "changeme"
+
+    # Optional authentication with an API key
+    #api_key: "id:api_key"
 
     # Optional HTTP path.
     #path: ""
