--- a/apm-server.yml
+++ b/apm-server.yml
@@ -214,7 +214,8 @@ apm-server:
       #password: "changeme"
 
   #kibana:
-    # Fallback method for fetching APM agent configurations.
+    # Required if running APM Server standalone to check if the APM package has been installed. Also
+    # required for APM agent configuration when using an output other than Elasticsearch.
     #enabled: false
 
     # Scheme and port can be left out and will be set to the default (`http` and `5601`).
