--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -2,7 +2,7 @@
 @Library('apm@current') _
 
 pipeline {
-  agent { label 'linux && immutable' }
+  agent { label 'microbenchmarks-pool' }
   environment {
     REPO = 'apm-server'
     BASE_DIR = "src/github.com/elastic/${env.REPO}"
@@ -128,6 +128,9 @@ pipeline {
     }
   }
   post {
+    always {
+      deleteDir()
+    }
     cleanup {
       notifyBuildResult(goBenchmarkComment: true)
     }
