Set processor.* fields in mappings and ingest

--- a/systemtest/approvals/TestCompressedSpans.approved.json
+++ b/systemtest/approvals/TestCompressedSpans.approved.json
@@ -39,8 +39,7 @@
                 "title": "systemtest.test"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -131,8 +130,7 @@
                 "title": "systemtest.test"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
