--- a/systemtest/approvals/TestJaeger/batch_1.approved.json
+++ b/systemtest/approvals/TestJaeger/batch_1.approved.json
@@ -45,10 +45,6 @@
             "parent": {
                 "id": "333295bfb438ea03"
             },
-            "processor": {
-                "event": "error",
-                "name": "error"
-            },
             "service": {
                 "language": {
                     "name": "Go"
@@ -109,10 +105,6 @@
             },
             "parent": {
                 "id": "614811d6c498bfb0"
-            },
-            "processor": {
-                "event": "error",
-                "name": "error"
             },
             "service": {
                 "language": {
@@ -175,10 +167,6 @@
             "parent": {
                 "id": "0242ee3774d9eab1"
             },
-            "processor": {
-                "event": "error",
-                "name": "error"
-            },
             "service": {
                 "language": {
                     "name": "Go"
@@ -207,7 +195,8 @@
             "data_stream.type": "logs",
             "event": {
                 "agent_id_status": "missing",
-                "ingested": "dynamic"
+                "ingested": "dynamic",
+                "kind": "event"
             },
             "host": {
                 "hostname": "host01",
@@ -227,10 +216,6 @@
             },
             "parent": {
                 "id": "7be2fd98d0973be3"
-            },
-            "processor": {
-                "event": "log",
-                "name": "log"
             },
             "service": {
                 "language": {
@@ -283,8 +268,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -345,8 +329,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -407,8 +390,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -469,8 +451,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -532,8 +513,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -594,8 +574,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -657,8 +636,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -719,8 +697,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -781,8 +758,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -843,8 +819,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -905,8 +880,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -967,8 +941,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -1029,8 +1002,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
@@ -1091,8 +1063,7 @@
                 "id": "7be2fd98d0973be3"
             },
             "processor": {
-                "event": "span",
-                "name": "transaction"
+                "event": "span"
             },
             "service": {
                 "language": {
