--- a/systemtest/approvals/TestIntakeLog/with_faas.approved.json
+++ b/systemtest/approvals/TestIntakeLog/with_faas.approved.json
@@ -16,7 +16,8 @@
             "data_stream.type": "logs",
             "event": {
                 "agent_id_status": "missing",
-                "ingested": "dynamic"
+                "ingested": "dynamic",
+                "kind": "event"
             },
             "faas": {
                 "coldstart": true,
@@ -66,10 +67,6 @@
                 },
                 "pid": 1234,
                 "title": "/usr/lib/jvm/java-10-openjdk-amd64/bin/java"
-            },
-            "processor": {
-                "event": "log",
-                "name": "log"
             },
             "service": {
                 "environment": "production",
